# Automatic-sport-scene-modelling

./: CMakeLists.txt  README.md  calibration.cpp  calibration.h  detection.cpp  detection.h  homographie.cpp  homographie.h  homography.cpp  homography.h  ideas.txt  image.h  main.cpp  openvideo.cpp  output.cpp  output.h  player.cpp  polygon.cpp  rectangles.cpp  rectangles.h  tracking.cpp  tracking.h  video.cpp  video.h
images/: images.pptx
report/: images.pptx  ~$images.pptx
